--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,7 +36,7 @@
                 <td><%= book.edition_year %></td>
                 <td><%= book.exemplary %></td>
                 <td><%= book.status %></td>
-                <td><%= link_to 'Detalhes', book %></td>
+                <td><%= link_to 'Detalhes', book, class: 'button' %></td>
               </tr>
             <% end %>
           </tbody>
