--- a/app/views/readers/index.html.erb
+++ b/app/views/readers/index.html.erb
@@ -27,7 +27,7 @@
               <td><%= reader.name %></td>
               <td><%= reader.email %></td>
               <td><%= reader.phone %></td>
-              <td><%= link_to 'Detalhes', reader %></td>
+              <td><%= link_to 'Detalhes', reader, class: 'button' %></td>
             </tr>
           <% end %>
         </tbody>
