--- a/app/views/loans/edit.html.erb
+++ b/app/views/loans/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-  <%= form_for @book do |f| %>
+  <%= form_for @loan do |f| %>
     <%= render "layouts/errors_messages", object: f.object %>
-    <h2>Editar Livro</h2>
+    <h2>Empréstimo</h2>
     <%= render "form", f: f %>
     <%= f.submit "Atualizar", class: "btn btn-primary" %>
   <% end %>
