--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12 text-center">
       <h2>Livros</h2>
     </div>
-    <div class="col-sm-4 col-md-12">
+    <div class="col-xs-12">
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
