--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -1,12 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
     <div>
-      <%= f.label :loan_date %>
-    </div>
-    <div class="form-group">
-      <%= f.date_field :loan_date, class: "form-control", value: Time.now.strftime('%Y-%m-%d') %>
-    </div>
-    <div>
       <%= f.label :book_id %>
     </div>
     <div class="form-group">
@@ -15,16 +9,26 @@
   </div>
   <div class="col-sm-6">
     <div>
-      <%= f.label :devolution_date %>
-    </div>
-    <div class="form-group">
-      <%= f.date_field :devolution_date, class: "form-control", value: Time.now.strftime('%Y-%m-%d') %>
-    </div>
-    <div>
       <%= f.label :reader_id %>
     </div>
     <div class="form-group">
       <%= f.select :reader_id, options_from_collection_for_select(@readers || [], :id, :name) %>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div>
+      <%= f.label :loan_date %>
+    </div>
+    <div class="form-group">
+      <%= f.date_field :loan_date, class: "form-control", value: Time.now.strftime('%Y-%m-%d') %>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div>
+      <%= f.label :devolution_date %>
+    </div>
+    <div class="form-group">
+      <%= f.date_field :devolution_date, class: "form-control", value: Time.now.strftime('%Y-%m-%d') %>
     </div>
   </div>
 </div>
