--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12 text-center">
       <h2>Empréstimos</h2>
     </div>
-    <div class="col-sm-4 col-md-12">
+    <div class="col-xs-12">
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
@@ -18,7 +18,7 @@
           <tbody>
             <% if @loans.empty? %>
               <tr>
-                <td colspan="4" class="text-center">
+                <td colspan="12" class="text-center">
                   <h3>Nenhum empréstimo ativo.</h3>
                 </td>
               </tr>
